--- a/reviewproject/templates/login.html
+++ b/reviewproject/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-  <form class="form-signin" method='post'{% csrf_token %}
+  <form class="form-signin" method='post'>{% csrf_token %}
   <img class="mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-nomal">Please login</h1>
   <label for ="inputEmail" class="sr-only">Username</label>
