--- a/reviewproject/templates/base.html
+++ b/reviewproject/templates/base.html
@@ -9,7 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    
+    {%load static %}
+
     {% block header %}
+    <link rel='stylesheet' type="text/css" href="{% static 'style.css'%}">
     {% endblock header %}
   </head>
   <body>
