--- a/reviewproject/templates/list.html
+++ b/reviewproject/templates/list.html
@@ -1,9 +1,11 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
+{% load static %}
 
 {% block header %}
-{%endblock header %}
 
-{%block content%}
+<link rel='stylesheet' type="text/css" href="{% static 'style.css' %}">
+{% endblock header %}
+{% block content %}
 <div class='container'>
 {% for item in object_list %}
 <div class="card">
@@ -11,9 +13,9 @@
    <div class="card-body">
     <h5 class="card-title">投稿者:{{item.author}}</h5>
     <h5 class="card-title">レビューが参考になった人:{{item.useful_review}}人</h5>
-    <a href="{% url 'list'%}" class="btn btn-primary">詳しくみる </a>
+    <a href="{% url 'detail' item.pk %}" class="btn btn-primary">詳しくみる </a>
   </div>
 </div>
-{%endfor%}
+{% endfor %}
 </div>
-{%endblock content%}
+{% endblock content %}
